# frac-gen

./: Cargo.toml
src/: frac_generator.rs  lib.rs
src/functions/: calculate_part.rs  get_val.rs  mod.rs
src/options/: frac_type.rs  fracral_type.rs  fractal_options.rs  gen_method.rs  mod.rs  options.rs  render_range.rs
