[package]
name = "frac-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
image = "0.24.7"
tokio =  { version = "1.33.0", features = ["rt", "macros"]}
env_logger = "0.10.0"
log = "0.4.20"